[package]
name = "pillar"
version = "0.1.2"
authors = ["Ando \"Thor\" Nando <divinegod@gmail.com>"]
edition = "2021"
include = [ "src/main.rs", "README.md"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
description = """
pillar is a small tool to format lines into columns
"""
documentation = "https://github.com/DivineGod/pillar"
homepage = "https://github.com/DivineGod/pillar"
repository = "https://github.com/DivineGod/pillar"
keywords = ["column", "tab", "table", "pad", "padding"]
readme = "README.md"

[[bin]]
bench = false
path = "src/main.rs"
name = "pillar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.20.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
